Add functionality to delete indexed files
